--- a/index.html
+++ b/index.html
@@ -18,25 +18,23 @@
 
 </head>
 <body ng-app="chatApp">
-
-<div class="container">
-    <div class="panel panel-default" id="chat-window">
-        <div class="panel-heading">Header</div>
-        <div class="panel-body"></div>
-        <div class="panel-footer">
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <textarea class="form-control"  placeholder="Message"></textarea>
-                    </div>
-                    <div class="col-xs-1 pull-right">
-                        <input type="button" class="btn btn-default" value="Send"/>
+    <div class="container">
+        <div class="panel panel-default" id="chat-window" ng-controller="chatController">
+            <div class="panel-heading">Header</div>
+            <div class="panel-body"></div>
+            <div class="panel-footer">
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <textarea class="form-control"  placeholder="Message"></textarea>
+                        </div>
+                        <div class="col-xs-1 pull-right">
+                            <input type="button" class="btn btn-default" value="Send" ng-click="sendMessage()"/>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
 </body>
 </html>
